// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> snapshots renders default 1`] = `
.c0 {
  background: #fafafc;
  border-radius: 4px;
  border: 2px solid #aaaaaa;
  color: #000;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c1 {
  float: right;
  cursor: pointer;
  margin-left: 1em;
}

<div
  className="c0"
  type="default"
>
  Default
  <i
    className="fa fa-remove c1"
    onClick={undefined}
  />
</div>
`;

exports[`<Alert /> snapshots renders error 1`] = `
.c0 {
  background: #c7254e;
  border-radius: 4px;
  border: 2px solid #861935;
  color: #fff;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c1 {
  float: right;
  cursor: pointer;
  margin-left: 1em;
}

<div
  className="c0"
  type="error"
>
  Error
  <i
    className="fa fa-remove c1"
    onClick={undefined}
  />
</div>
`;

exports[`<Alert /> snapshots renders success 1`] = `
.c0 {
  background: #38bd93;
  border-radius: 4px;
  border: 2px solid #278265;
  color: #fff;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c1 {
  float: right;
  cursor: pointer;
  margin-left: 1em;
}

<div
  className="c0"
  type="success"
>
  Success
  <i
    className="fa fa-remove c1"
    onClick={undefined}
  />
</div>
`;

exports[`<Alert /> snapshots renders warning 1`] = `
.c0 {
  background: #d4ab27;
  border-radius: 4px;
  border: 2px solid #93771b;
  color: #fff;
  margin: 8px 0 8px 0;
  min-height: 1em;
  opacity: 1;
  padding: 1em;
  -webkit-transition: opacity 0.2s linear;
  transition: opacity 0.2s linear;
}

.c1 {
  float: right;
  cursor: pointer;
  margin-left: 1em;
}

<div
  className="c0"
  type="warning"
>
  Warning
  <i
    className="fa fa-remove c1"
    onClick={undefined}
  />
</div>
`;
